# product-inv-payment

./: .gitignore
inventory/: consumer.py  main.py  pyproject.toml
payment/: consumer.py  main.py  pyproject.toml
